--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                         
                         <div class="grid grid-cols-2 gap-3 mb-4">
                             <div class="anatomy-image-container">
-                                <img src="https://github.com/BastianMAS/livret-musculation-cap/blob/main/images/planche%20anatomique%20face.PNG?raw=true" alt="Planche anatomique dos">
+                                <img src="https://github.com/BastianMAS/livret-musculation-cap/blob/main/images/planche%20anatomique%20dos.PNG?raw=true" alt="Planche anatomique dos">
                                 <p class="text-white" style="font-size: 0.9rem; opacity: 0.8; margin-top: 0.5rem;">Vue de dos</p>
                             </div>
                             
@@ -1414,4 +1414,5 @@
         const app = new LivretApp();
     </script>
 </body>
+
 </html>
