--- a/index.html
+++ b/index.html
@@ -3075,9 +3075,15 @@
                 const allExercises = [
                     ...coursData.exercicesPectoraux,
                     ...coursData.exercicesDos,
+                    ...coursData.exercicesTrapezes,
                     ...coursData.exercicesEpaules,
-                    ...coursData.exercicesBras,
-                    ...coursData.exercicesBasDuCorps,
+                    ...coursData.exercicesBiceps,
+                    ...coursData.exercicesTriceps,
+                    ...coursData.exercicesQuadriceps,
+                    ...coursData.exercicesIschios,
+                    ...coursData.exercicesFessiers,
+                    ...coursData.exercicesMollets,
+                    ...coursData.exercicesAdducteurs,
                     ...coursData.exercicesAbdos
                 ];
                 const filteredExercises = this.filterExercises(allExercises);
